tests/ui/const-generics/mgca/type_const-mismatched-types.stderr
error: the constant `5` is not of type `u32`
  --> $DIR/type_const-mismatched-types.rs:4:1
   |
LL | type const FREE: u32 = 5_usize;
   | ^^^^^^^^^^^^^^^^^^^^ expected `u32`, found `usize`

error: the constant `5` is not of type `isize`
  --> $DIR/type_const-mismatched-types.rs:8:1
   |
LL | type const FREE2: isize = FREE;
   | ^^^^^^^^^^^^^^^^^^^^^^^ expected `isize`, found `usize`

error[E0308]: mismatched types
  --> $DIR/type_const-mismatched-types.rs:16:27
   |
LL |     type const N: usize = false;
   |                           ^^^^^ expected `usize`, found `bool`

error[E0308]: mismatched types
  --> $DIR/type_const-mismatched-types.rs:4:24
   |
LL | type const FREE: u32 = 5_usize;
   |                        ^^^^^^^ expected `u32`, found `usize`
   |
help: change the type of the numeric literal from `usize` to `u32`
   |
LL - type const FREE: u32 = 5_usize;
LL + type const FREE: u32 = 5_u32;
   |

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0308`.
